[package]
name = "kong-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.11", features = ["json"]}
serde = {version = "1.0.139", features = ['derive']}
serde_json = "1.0.82"
# csv = "1.1.6"
anyhow = "1.0.58"
# tokio = { version = "1.20.0", features = ["full"] }
web3 = "0.18.0"
dotenv = "0.15.0"
hex-literal = "0.3"
ethabi = "16.0.0"
serde-aux = { version = "3.0.1" }
hex ="0.3.1"
progress_bar = "1.0.2"
async-recursion = "0.3.2"
rocket = "0.5.0-rc.2"